# python-project-83

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
analyzer/: __init__.py  app.py  config.py  containers.py  models.py  services.py  validators.py
analyzer/templates/: index.html
analyzer/templates/components/: forms.html  navbars.html
analyzer/templates/urls/: index.html
page_analyzer/: app.py  config.py  containers.py  db.py  exceptions.py  services.py  validators.py
page_analyzer/templates/: base.html
page_analyzer/templates/errors/: 404.html
page_analyzer/templates/urls/: urls.html
