[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ruagcaz <Andrey.GLADCHENKO@raiffeisen.ru>"]
packages = [{include = "page_analyzer"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"
requests="^2.28.1"
gunicorn = "^21.2.0"


[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
isort = "^5.13.2"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
